Fixed profile pic getting cropped on navbar

--- a/src/components/navbar-components/Navbar-Style.css
+++ b/src/components/navbar-components/Navbar-Style.css
@@ -66,12 +66,16 @@
   height: 41px;
   overflow: hidden;
   background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar__profile-pic {
-  max-height: 41px;
-  max-width: 41px;
-  margin-left: -1px;
+  height: 41px;
+  width: 41px;
+  border-radius: 100px;
+  object-fit: cover;
 }
 
 .navbar__profile-button-link {
